manifests/cluster-addons/media/fileflows/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fileflows
  namespace: media
spec:
  selector:
    app.kubernetes.io/name: fileflows
  ports:
    - name: http
      port: 5000
      targetPort: 5000
