manifests/cluster-addons/media/fileflows/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fileflows
  namespace: media
  annotations:
    tailscale.com/tags: tag:k8s,tag:media
spec:
  ingressClassName: tailscale
  rules:
    - host: fileflows
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: fileflows
                port:
                  number: 5000
  tls:
    - hosts:
        - fileflows
